PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 9.8.0
9 July 2020

pts-core: Handling of cases where all options are unsupported (such as CUDA and OpenCL tests with no valid backends found) to avoid prompts
pts-core: Be more liberal in allowing CUDA/OpenCL GPU compute tests to run fine without display server active
pts-core: Fix for not filling test suites of contained tests in some select cases (sub-suites listing in results viewer)
pts-core: Allow creating new virtual test suites that are not prefixed by a OB repository
phodevi: NVIDIA GPU detection within WSL2
docker: Rewritten phoronix/pts Docker implementation based on Ubuntu 20.04 LTS

Phoronix Test Suite 9.8.0 Milestone 2
24 June 2020

pts-core: Add client side plumbing for estimated test install time from OpenBenchmarking.org
pts-core: Add estimate-install-time sub-command, show estimated install time when installing a test
pts-core: Improve web browser selection logic for result viewer
pts-core: Add search field to the result viewer areas for limiting based on title/argument matching
pts-core: Various minor fixes
pts-core: Don't show OpenCL test options if no OpenCL drivers/adapters appear present
phodevi: Fix for incorrect monitor count when parsing X.Org log
phodevi: Warning fixes for latest WSL

Phoronix Test Suite 9.8.0 Milestone 1
3 June 2020

pts-core: When an install fails, try a newer minor version update to that test profile if available (fixes broken download mirrors, etc)
pts-core: When a newer minor version of a test profile is installed and a requested (older) one is not, use the newer compatible version
pts-core: Rewrite virtual test suite implementation
pts-core: Add handler for ensuring reported system time is accurate, otherwise calculate current date/time using offsets
pts-core: When scanning test suites on disk, ensure the latest test suite version is used
pts-core: Add test-to-suite-map sub-command